--- a/style.css
+++ b/style.css
@@ -132,18 +132,26 @@ body {
   height: 100%;
   background-color: rgba(91, 94, 115, 0.8);
   display: none;
+  /* max-width: 100%;
+  max-height: 100%;
+  object-fit: contain; */
 }
 
 #lightbox.active {
   display: flex;
   justify-content: center;
   align-items: center;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
 }
 
 #lightbox .lightbox-image {
   border: 3px solid whitesmoke;
+  /* max-width: 90%;
+  max-height: 90%; */
+  object-fit: contain;
 }
-
 /* .centered-image {
   position: fixed;
   top: 50%;
@@ -263,10 +271,23 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 930px) {
   .layout-container {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
+  }
+
+  #lightbox.active {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #lightbox .lightbox-image {
+    border: 3px solid whitesmoke;
+    max-width: 90%;
+    max-height: 90%;
+    object-fit: contain;
   }
 }
 
