--- a/style.css
+++ b/style.css
@@ -101,10 +101,11 @@ body {
   color: var(--clr-date);
 }
 
-.card-content p {
+.card-text {
   font-size: 1rem;
   line-height: 1.5;
   margin-top: 1rem;
+  letter-spacing: 0.05em;
   color: var(--clr-text);
 }
 .main-img {
@@ -260,6 +261,13 @@ body.dark {
   width: 80%;
   color: var(--dark-text-clr);
   border: 1px solid var(--dark-border-clr);
+}
+
+.card-text-dark {
+  font-size: 1rem;
+  line-height: 1.5;
+  margin-top: 1rem;
+  color: white;
 }
 /* Media query */
 
